--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,14 @@
       </li>
 
       <li class="nav-item">
-       <%= link_to 'Message an Elf', message_path, class: 'nav-link' %>
+       <%= link_to 'Northpole Facts', facts_path, class: 'nav-link' %>
       </li>
-      
+
+      <li class="nav-item social">
+      <%= link_to 'https://santaslist-wendy-cordero.herokuapp.com/' do %>
+        <span class= "social-button">&#127877</span>
+      <% end %>
+       </li>     
       </ul>
   </div>
   </nav>
