--- a/app/views/static_pages/Recipes.html.erb
+++ b/app/views/static_pages/Recipes.html.erb
@@ -3,32 +3,57 @@
   <h1>Santa's Favorite Recipes!</h1> 
   <p>
   <h3>Vanilla Bean Sugar Cookies</h3>
-  <ul>
+<div class="row">  
+  <ul class="col-6">
    <li>1/3 Cp Butter</li><li>3/4 Cp Granulated Sugar</li>
    <li>1/3 Cp Shortening</li><li>1 Tbsp Milk</li>
    <li>2 Cps Flour</li><li>1 Tsp Baking Powder</li>
    <li>1 Egg</li><li>1/8 Tsp Salt</li>
    <li>1 Real Vanilla Bean </li>
- </ul> 
+  </ul> 
+  
+    <div class="col-6">
+      <%= image_tag 'Sugarcookies.png', class: 'img-fluid' %>
+    </div>
+  </div>  
  Combined butter, shortening, egg, milk, and vanilla together and set aside. Combine flour, granulated sugar, baking powder, and salt together and blend well. Add wet ingredients to dry ingredients and mix thoroughly. Chill dough for 3 hrs 
  Preheat oven to 375 degrees and bake for 7-8 minutes. Place balls approximately 2 inch think on ungreased cookie sheet. Sprinkle with sugar before baking unless you plan to ice your cookies.
+ <br />
+ </p>
  <hr>
+<p>
+ <br />
  <h3>Butter Frosting</h3>
- <ul>
-  <li>1/3 Cp Butter</li><li>4 1/2 Cp Powdered Sugar</li>
+ <div class="row">  
+  <ul class="col-6">
+  <li >1/3 Cp Butter</li><li>4 1/2 Cp Powdered Sugar</li>
   <li>1/4 Cp Milk</li><li> 1 1/2 Tsp Vanilla</li>
+  </ul>
+
+  <div class="col-6">
+      <%= image_tag 'Butterfrosting.png', class: 'img-fluid' %>
+    </div>
+  </div>  
   Add food coloring if you want to decorate!
- </ul>  
+ <br />
+</p>
  <hr>
+<p>
+ <br />
  <h3>Hot Cocoa</h3>
- <ul>
+<div class="row">  
+  <ul class="col-6">
   <li>1 Cp Evaporated Milk</li><li>1/4 Cp Unsweetened Cocoa Powdered</li>
   <li>3 Cp Whole Milk</li><li> 1 Vanilla Bean or ½ Tsp Vanilla</li>
   <li>1/4 Cp of Sugar</li>
+ </ul> 
+   <div class="col-6">
+      <%= image_tag 'Hotcocoa.png', class: 'img-fluid' %>
+    </div>
+  </div> 
   Place all ingredients in a saucepan stiring so not to scortch the milk. Bring to Boil, then pour, top, and serve.
   Top with 12 Small Marshmallows, or 3 Large ones!
   Or even better top with Whip Cream, a Cinnamon stick, and a pinch of Cinnamon!
- </ul>                         
+  </div>                      
                               
  </p>
-</div>
