rspect install, no errors

--- a/app/views/static_pages/facts.html.erb
+++ b/app/views/static_pages/facts.html.erb
@@ -15,7 +15,7 @@
 <br />
 <li>This isn't the only place to see reindeer in the world; a reindeer herd in the U.K. inhabits the Cairngorm Mountains of northern Scotland. The E.L.V.E.S. Scientific Research  department has been studying their flight paterns to see if they can one day join Santa's Sleigh team.</li>
 <br />
-<li>E.L.V.E.S stands for Elf logistics, velocity, and Electrogenesis Science. This department studies the sciences of engineering of complex operations, speed of particles, and the production of electricity. </li>
+<li>E.L.V.E.S. stands for Elf Logistics, Velocity, and Electrogenesis Science. This department studies the sciences of engineering of complex operations, speed of particles, and the production of electricity. </li>
 
 </ul>
 </P>
