hashed out images

--- a/app/views/static_pages/Recipes.html.erb
+++ b/app/views/static_pages/Recipes.html.erb
@@ -13,7 +13,7 @@
   </ul> 
   
     <div class="col-6">
-      <%= image_tag 'Sugarcookies.png', class: 'img-fluid' %>
+      <!--<%= image_tag 'Sugarcookies.png', class: 'img-fluid' %>-->
     </div>
   </div>  
  Combined butter, shortening, egg, milk, and vanilla together and set aside. Combine flour, granulated sugar, baking powder, and salt together and blend well. Add wet ingredients to dry ingredients and mix thoroughly. Chill dough for 3 hrs 
@@ -31,7 +31,7 @@
   </ul>
 
   <div class="col-6">
-      <%= image_tag 'Butterfrosting.png', class: 'img-fluid' %>
+      <!--<%= image_tag 'Butterfrosting.png', class: 'img-fluid' %>-->
     </div>
   </div>  
   Add food coloring if you want to decorate!
@@ -48,7 +48,7 @@
   <li>1/4 Cp of Sugar</li>
  </ul> 
    <div class="col-6">
-      <%= image_tag 'Hotcocoa.png', class: 'img-fluid' %>
+      <!--<%= image_tag 'Hotcocoa.png', class: 'img-fluid' %>-->
     </div>
   </div> 
   Place all ingredients in a saucepan stiring so not to scortch the milk. Bring to Boil, then pour, top, and serve.
